# dtrtmp

./: .gitignore  CMakeLists.txt  README.md  android_toolchain.cmake
include/: flvmux_api.h  rtmp_api.h
librtmp/: Makefile  librtmp.so.1
src/: flvmux.cpp  log_print.h  rtmp_api.c  rtmp_api.cpp
test/: rtmp_test.cpp
