# CMake version
cmake_minimum_required (VERSION 2.8)

# project
project (dtrtmp)

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")

# DEFS
if(ANDROID)
    SET(LINUX FALSE)
    ADD_DEFINITIONS(-DENABLE_ANDROID)
    MESSAGE("-- TARGET: ANDROID")
else()
    SET(LINUX TRUE)
    ADD_DEFINITIONS(-DENABLE_LINUX)
    MESSAGE("-- TARGET: LINUX")
endif()

#librtmp
SET(LIBRTMP "./librtmp")
SET(LIBRTMP_INCLUDE_DIR ${LIBRTMP})
SET(LIBRTMP_LIBRARY ${LIBRTMP})
INCLUDE_DIRECTORIES(${LIBRTMP_INCLUDE_DIR})

# Target
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(src)

AUX_SOURCE_DIRECTORY(src SRC_CODEC)
ADD_LIBRARY(dtrtmp SHARED ${SRC_CODEC})
if(ANDROID)
    TARGET_LINK_LIBRARIES(dtcodec log)
endif()

# target - test
ADD_EXECUTABLE(rtmp_test test/rtmp_test.cpp)
TARGET_LINK_LIBRARIES(rtmp_test dtrtmp)

INSTALL(TARGETS dtcodec
#RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
ARCHIVE DESTINATION lib
)
INSTALL(DIRECTORY include/ DESTINATION /usr/local/include/${PROJECT_NAME})

