# CMake version
cmake_minimum_required (VERSION 2.8)

# project
project (dtrtmp)

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")

# DEFS
if(ANDROID)
    SET(LINUX FALSE)
    ADD_DEFINITIONS(-DENABLE_ANDROID)
    MESSAGE("-- TARGET: ANDROID")
else()
    SET(LINUX TRUE)
    ADD_DEFINITIONS(-DENABLE_LINUX)
    MESSAGE("-- TARGET: LINUX")
endif()

#librtmp
SET(LIBRTMP "${PROJECT_SOURCE_DIR}/librtmp")
INCLUDE_DIRECTORIES(${LIBRTMP})
#ADD_DEFINITIONS(-DNO_CRYPTO)
#AUX_SOURCE_DIRECTORY(${LIBRTMP} SRC_RTMP)
#ADD_LIBRARY(rtmp STATIC ${SRC_RTMP})

# Target
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(src)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
AUX_SOURCE_DIRECTORY(src SRC_DTRTMP)
ADD_LIBRARY(dtrtmp SHARED ${SRC_DTRTMP})
TARGET_LINK_LIBRARIES(dtrtmp ${LIBRTMP}/librtmp.a)
if(ANDROID)
    TARGET_LINK_LIBRARIES(dtrtmp log)
endif()

# target - test
ADD_EXECUTABLE(rtmp_test test/rtmp_test.cpp)
TARGET_LINK_LIBRARIES(rtmp_test dtrtmp)

INSTALL(TARGETS dtrtmp
#RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
ARCHIVE DESTINATION lib
)
INSTALL(DIRECTORY include/ DESTINATION /usr/local/include/${PROJECT_NAME})
